--- a/package.json
+++ b/package.json
@@ -12,21 +12,17 @@
   "license": "MIT",
   "private": false,
   "scripts": {
-    "start": "electron example.js",
     "test": "xo && tsd",
-    "native_build": "node-gyp rebuild",
-    "install": "prebuild-install || node install.js"
+    "install": "node-gyp rebuild"
   },
   "dependencies": {
     "electron-util": "^0.17.2",
     "execa": "^5.1.1",
-    "macos-version": "^5.2.1",
-    "prebuild-install": "^7.1.1"
+    "macos-version": "^5.2.1"
   },
   "devDependencies": {
     "electron": "23.0.0",
     "node-abi": "3.26.0",
-    "prebuild": "^11.0.4",
     "tsd": "^0.24.1",
     "xo": "^0.39.1"
   },
